[package]
name = "up"
version = "0.1.0"
authors = ["353fc443 <353fc443@pm.me>", "songww <sww4718168@163.com>"]
edition = "2021"
license = "MIT and Apache"
readme = "README.md"
repository = "https://github.com/songww/up"
description = "Download binary for your OS from Github."
exclude = [
    ".github/",
    "static",
]
resolver = "2"

[dependencies]
nix = "0.23"
anyhow = "1"
bytesize = "1"
dialoguer = "0.9"
minijinja = "0.13"
indicatif = " 0.16"
directories = "4"
futures-lite = "1"
clap = { version = "3", features = [ "derive" ] }
serde = { version = "1", features = [ "derive" ] }
chrono = { version = "0.4", features = [ "serde" ] }
tokio-util = { version = "0.6", features = [ "compat" ] }
toml = { version = "0.5", features = [ "preserve_order" ] }
indexmap = { version = "1", features = ["std", "serde-1"] }
reqwest = { version = "0.11", features = ["stream", "trust-dns", "socks"] }
target = { version = "0.12", package = "target-lexicon", features = ["std"] }
compressed = { version = "0.12", package = "compress-tools", features = [ "tokio_support" ] }

[dependencies.tokio]
version = "1"
features = [ "macros", "rt-multi-thread", "time", "process", "io-util", "fs" ]

[dependencies.surf]
version = "2"
default-features = false
features = [ "curl-client", "middleware-logger", "encoding" ]
